--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,6 +1,6 @@
 @charset "UFT-8";
 
-/*Configurações gerais */
+/*Aparelho deitado(landscape) */
 
 body {
     background: url(../img02.jfif) no-repeat;    
